a.fundamentals/l12.eksCustom/sg.tf
resource "aws_security_group" "node" {
  name        = "ed-eks-node-sg"
  description = "Allow ssh inbound traffic"
  vpc_id      =  aws_vpc.vpc.id

  ingress {
    description      = "ssh access to public"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "nodePort"
    from_port        = 31000
    to_port          = 31000
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

}
